﻿
=========================================================================

TODO:
	- Freeroam script
	- Documentation (default libs)
	- Convert CLR type (userdata) to table (?)